[tool.poetry]
name = "leetscrape"
version = "0.1.11"
description = "Introducing LeetScrape - a powerful and efficient Python package designed to scrape problem statements and their topic and company tags, difficulty, test cases, hints, and code stubs from LeetCode.com. Easily download and save LeetCode problems to your local machine, making it convenient for offline practice and studying. It is perfect for anyone preparing for coding interviews. With the LeetScrape, you can boost your coding skills and improve your chances of landing your dream job."
authors = ["Nikhil Ravi <nr337@cornell.edu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nikhil-ravi/LeetScrape"
documentation = "https://leetscrape.chowkabhara.com/"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pandas = "^1.5.2"
numpy = "^1.24.1"
SQLAlchemy = "^1.4.46"
tqdm = "^4.64.1"
psycopg2 = "^2.9.5"
pypandoc_binary = "^1.10"
marko = "^1.2.2"
pydantic = "^1.10.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"
python-dotenv = "^0.21.0"
black = "^22.12.0"
pytest = "^7.2.1"
flake8 = "^6.0.0"
docstring-parser = "^0.15"
pytest-xdist = "^3.1.0"
pytest-html = "^3.2.0"
coverage = "^7.0.5"
pytest-cov = "^4.0.0"


[tool.poetry.group.docs.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.5"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
minversion = "6.0"
addopts = "-ra -q"

[tool.poetry.extras]
file = ["pypandoc", "marko"]

[tool.poetry.scripts]
leetscrape = "leetscrape.scripts:leetscrape_question"
leetupload_solution = "leetscrape.scripts:leetupload_solution"